ZezeJava: 少量修正ModuleRedirect代码生成